--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,32 @@ h2{
     text-align: center;
 }
 /*DIAPORAMA*/
+#diaporama{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 50px;
+}
+#diaporama > button{
+    height: 30px;
+}
+#carousel{
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+#carousel-control{
+    margin: 0 auto;
+}
+.slide{
+    width: 100%;
+    height: auto;
+    border-radius: 30px;
+}
+#slide2,
+#slide3{
+    display: none;
+}
 
 
 /*
