--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 /*GENERAL*/
 html{
-    height: 100%;
+    height: auto;
 }
 body {
     padding-top: 1rem;
@@ -13,7 +13,8 @@ h1{
     padding-bottom: 30px;
     text-align: center;
 }
-h2{
+h2,
+p{
     text-align: center;
 }
 /*DIAPORAMA*/
@@ -50,8 +51,7 @@ h2{
 MAIN SECTION (MAP + FORM)
 
 */
-
-#main{
+#main > div{
     display: flex;
     width: 100%;
     padding-left: 30px;
