--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@ body {
     background: linear-gradient(white, black);
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: hidden;
 }
 h1{
     padding-bottom: 30px;
@@ -51,6 +52,10 @@ p{
 #slide{
     width: 100%;
     opacity: 0;
+}
+#slide,
+#description{
+    border-radius: 20px;
 }
 .animate{
     animation-name: test;
