--- a/style/style.css
+++ b/style/style.css
@@ -18,10 +18,6 @@ h2,
 p{
     text-align: center;
 }
-#user-information > h3{
-    font-size: 1.2rem;
-    text-decoration: underline;
-}
 .title{
     background: #fff;
     margin: 0 auto;
@@ -38,7 +34,13 @@ p{
     width: 200px;
     height: 170px;
 }
-/*DIAPORAMA*/
+/*
+
+
+DIAPORAMA
+
+
+*/
 #diaporama{
     display: flex;
     flex-direction: column;
@@ -259,7 +261,20 @@ SECTION USER INFO RESERVATION
 
 
 */
-        
+/* BTN HEAD */
+#userAccess{
+    height: auto !important;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    display: none;   
+    border-radius: 10px;
+    padding: 8px 10px;
+}
+#userAccess > a{
+    text-decoration: none;
+    color: #000;
+}
+/* FOOTER INFO */
 #user-information{
     display: none;
     margin: 30px auto;
@@ -268,10 +283,29 @@ SECTION USER INFO RESERVATION
     color: #fff;
     border: solid 3px silver;
     border-radius: 30px;
+    background: grey;
 }
 #user-information > p{
     margin: 0;
 }
+#user-information > h3{
+    font-size: 1.2rem;
+    text-decoration: underline;
+    margin-bottom: 15px;
+}
 #reservNone{
     display: none;
+}
+#timeline{
+    position: relative;
+    width: 95%;
+    height: 10px;
+    background: linear-gradient(to right, rgb(0,150,0), rgb(150,0,0));
+    padding-bottom: 10px;
+    margin: 0 auto;
+}
+#timeline-cursor{
+    position: absolute;
+    left: -1%;
+    top: -10px;
 }
