change timeline precision, now use float(.00)

--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ html{
 body {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background: linear-gradient(white, #008000);
+    background: #bbddbb;
     background-repeat: no-repeat;
     background-size: cover;
     overflow-x: hidden;
