--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,7 @@ DIAPORAMA
     position: relative;
     width: 90%;
     max-width: 1200px;
+    min-height: 400px;
     margin: 0 auto;
 }
 figure{
@@ -317,16 +318,24 @@ SECTION USER INFO RESERVATION
 }
 /* BTN HEAD */
 #userAccess{
+    position: fixed;
     height: auto !important;
     margin: 0 auto;
     margin-bottom: 15px;
     display: none;   
     border-radius: 10px;
     padding: 8px 10px;
+    z-index: 9999;
+    border: 0;
+    left: 10px;
+}
+#userAccess:hover{
+    border: 4px solid darkblue;
+    color:white;
 }
 #userAccess > a{
     text-decoration: none;
-    color: #000;
+    color: #fff;
 }
 /* FOOTER INFO */
 #user-information{
@@ -334,9 +343,10 @@ SECTION USER INFO RESERVATION
     margin: 30px auto;
     width: 450px;
     text-align: center;
-    border: solid 3px silver;
+    border: 0;
     border-radius: 30px;
-    background: #bbddbb;
+    color: #fff;
+    background: #079fbb;
 }
 #user-information > p{
     margin: 0;
