--- a/style/style.css
+++ b/style/style.css
@@ -35,14 +35,6 @@ p{
     height: 170px;
 }
 
-#translate{
-    position:absolute;
-    right: 10px;
-}
-#translate > button:hover{
-    border: 2px solid yellow;
-}
-
 /*
 
 
@@ -354,8 +346,7 @@ SECTION USER INFO RESERVATION
     left: 10px;
 }
 #userAccess:hover{
-    border: 4px solid darkblue;
-    color:white;
+    font-size: 1.2rem;
 }
 #userAccess > a{
     text-decoration: none;
