--- a/style/style.css
+++ b/style/style.css
@@ -115,10 +115,10 @@ figure{
 }
 @keyframes btnHover{
     0%{
-        border: 0; 
+        font-size: 1rem; 
     }
     100%{
-        border: 2px solid grey;
+        font-size: 1.1rem;
     }
 }
 
