add interval to set height of slide_container every 500ms specific to debug purpose (switch from/to smartphone size)

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -25,6 +25,9 @@
     #mapid{
         height: 500px;
     }
+    #carousel{
+        min-height: 200px;
+    }
 }
 
 @media screen and (max-width: 480px){
