Rework some code to object, add stations count, add closed stations.. Fix the possibility to reserve with 0 or less cycle for a new reservation

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -28,6 +28,9 @@
     #carousel{
         min-height: 200px;
     }
+    #stationsGlobal{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 480px){
